@@ -1,3 +1,7 @@
+Fri Jul 15 11:19:54 BST 2005 (trog)
+-----------------------------------
+  * libclamav/chmunpack.c: Fix possible malloc overflow. Reported by Alex Wheeler.
+
 Mon Jul 11 15:57:05 BST 2005 (njh)
 ----------------------------------
   * libclamav/tnef.c:	Fix possible crash if the length field is 0 or negative
